--- a/css/9.css
+++ b/css/9.css
@@ -4,7 +4,7 @@ body {
 	margin: 0 auto;
 }
 .v {
-	margin-left: 150px;
+	margin-left: 5%;
 	border: groove;
 	border-width: 2px;
 	border-radius: 3px;
@@ -13,7 +13,7 @@ body {
 	color: white;
 }
 .z {
-	margin-left: 150px;
+	margin-left: 5%;
 	border: groove;
 	border-width: 2px;
 	border-radius: 3px;
@@ -21,7 +21,7 @@ body {
 	border-color: red;
 }
 .x {
-	margin-left: 0px;
+	margin-left: 5%;
 	border: groove;
 	border-width: 2px;
 	border-radius: 3px;
@@ -29,7 +29,7 @@ body {
 	border-color: red;
 }
 .c {
-	margin-left: 150px;
+	margin-left: 5%;
 	border: groove;
 	border-width: 2px;
 	border-radius: 3px;
@@ -81,7 +81,7 @@ a {
 	padding:650px 900px;
 }
 .zz {
-	margin-left: 150px;
+	margin-left: 5%;
 	border: groove;
 	border-width: 2px;
 	border-radius: 3px;
